@@ -20,45 +20,70 @@ public class App {
 
 	public static void main(String[] args) {
 		seed();
+		executarMenu();
+	}
 
-		while (true) {
-			System.out.println("\n=== OLIMPÍADA DE QUESTÕES (V1) ===");
-			System.out.println("1) Cadastrar participante");
-			System.out.println("2) Cadastrar prova");
-			System.out.println("3) Cadastrar questão (A–E) em uma prova");
-			System.out.println("4) Aplicar prova (selecionar participante + prova)");
-			System.out.println("5) Listar tentativas (resumo)");
-			System.out.println("0) Sair");
-			System.out.print("> ");
+	// ================= MENU =================
 
-			switch (in.nextLine()) {
-			case "1" -> cadastrarParticipante();
-			case "2" -> cadastrarProva();
-			case "3" -> cadastrarQuestao();
-			case "4" -> aplicarProva();
-			case "5" -> listarTentativas();
-			case "0" -> {
+	private static void executarMenu() {
+		boolean rodando = true;
+
+		while (rodando) {
+			mostrarMenu();
+			String opcao = in.nextLine();
+
+			switch (opcao) {
+			case "1":
+				cadastrarParticipante();
+				break;
+			case "2":
+				cadastrarProva();
+				break;
+			case "3":
+				cadastrarQuestao();
+				break;
+			case "4":
+				aplicarProva();
+				break;
+			case "5":
+				listarTentativas();
+				break;
+			case "0":
 				System.out.println("tchau");
-				return;
-			}
-			default -> System.out.println("opção inválida");
+				rodando = false;
+				break;
+			default:
+				System.out.println("opção inválida");
 			}
 		}
 	}
 
+	private static void mostrarMenu() {
+		System.out.println("\n=== OLIMPÍADA DE QUESTÕES (V1) ===");
+		System.out.println("1) Cadastrar participante");
+		System.out.println("2) Cadastrar prova");
+		System.out.println("3) Cadastrar questão");
+		System.out.println("4) Aplicar prova");
+		System.out.println("5) Listar tentativas");
+		System.out.println("0) Sair");
+		System.out.print("> ");
+	}
+
+	// ================= CADASTRO =================
+
 	static void cadastrarParticipante() {
 		System.out.print("Nome: ");
-		var nome = in.nextLine();
+		String nome = in.nextLine();
 
-		System.out.print("Email (opcional): ");
-		var email = in.nextLine();
+		System.out.print("Email: ");
+		String email = in.nextLine();
 
-		if (nome == null || nome.isBlank()) {
+		if (nome == null || nome.trim().isEmpty()) {
 			System.out.println("nome inválido");
 			return;
 		}
 
-		var p = new Participante();
+		Participante p = new Participante();
 		p.setId(proximoParticipanteId++);
 		p.setNome(nome);
 		p.setEmail(email);
@@ -69,14 +94,14 @@ public class App {
 
 	static void cadastrarProva() {
 		System.out.print("Título da prova: ");
-		var titulo = in.nextLine();
+		String titulo = in.nextLine();
 
-		if (titulo == null || titulo.isBlank()) {
+		if (titulo == null || titulo.trim().isEmpty()) {
 			System.out.println("título inválido");
 			return;
 		}
 
-		var prova = new Prova();
+		Prova prova = new Prova();
 		prova.setId(proximaProvaId++);
 		prova.setTitulo(titulo);
 
@@ -90,14 +115,13 @@ public class App {
 			return;
 		}
 
-		var provaId = escolherProva();
-		if (provaId == null)
-			return;
+		Long provaId = escolherProva();
+		if (provaId == null) return;
 
 		System.out.println("Enunciado:");
-		var enunciado = in.nextLine();
+		String enunciado = in.nextLine();
 
-		var alternativas = new String[5];
+		String[] alternativas = new String[5];
 		for (int i = 0; i < 5; i++) {
 			char letra = (char) ('A' + i);
 			System.out.print("Alternativa " + letra + ": ");
@@ -106,14 +130,15 @@ public class App {
 
 		System.out.print("Alternativa correta (A–E): ");
 		char correta;
+
 		try {
-			correta = Questao.normalizar(in.nextLine().trim().charAt(0));
+			correta = Questao.normalizarAlternativa(in.nextLine().trim().charAt(0));
 		} catch (Exception e) {
 			System.out.println("alternativa inválida");
 			return;
 		}
 
-		var q = new Questao();
+		Questao q = new Questao();
 		q.setId(proximaQuestaoId++);
 		q.setProvaId(provaId);
 		q.setEnunciado(enunciado);
@@ -121,196 +146,167 @@ public class App {
 		q.setAlternativaCorreta(correta);
 
 		questoes.add(q);
-
-		System.out.println("Questão cadastrada: " + q.getId() + " (na prova " + provaId + ")");
+		System.out.println("Questão cadastrada: " + q.getId());
 	}
 
+	// ================= PROVA =================
 
 	static void aplicarProva() {
 		if (participantes.isEmpty()) {
 			System.out.println("cadastre participantes primeiro");
 			return;
 		}
+
 		if (provas.isEmpty()) {
 			System.out.println("cadastre provas primeiro");
 			return;
 		}
 
-		var participanteId = escolherParticipante();
-		if (participanteId == null)
-			return;
+		Long participanteId = escolherParticipante();
+		if (participanteId == null) return;
 
-		var provaId = escolherProva();
-		if (provaId == null)
-			return;
+		Long provaId = escolherProva();
+		if (provaId == null) return;
 
-		var questoesDaProva = questoes.stream().filter(q -> q.getProvaId() == provaId).toList();
+		List<Questao> lista = questoes.stream()
+				.filter(q -> q.getProvaId() == provaId)
+				.toList();
 
-		if (questoesDaProva.isEmpty()) {
-			System.out.println("esta prova não possui questões cadastradas");
+		if (lista.isEmpty()) {
+			System.out.println("prova sem questões");
 			return;
 		}
 
-		var tentativa = new Tentativa();
+		Tentativa tentativa = new Tentativa();
 		tentativa.setId(proximaTentativaId++);
 		tentativa.setParticipanteId(participanteId);
 		tentativa.setProvaId(provaId);
 
 		System.out.println("\n--- Início da Prova ---");
 
-		for (var q : questoesDaProva) {
+		for (Questao q : lista) {
+
 			System.out.println("\nQuestão #" + q.getId());
 			System.out.println(q.getEnunciado());
 
-			System.out.println("Posição inicial:");
 			imprimirTabuleiroFen(q.getFenInicial());
 
-			for (var alt : q.getAlternativas()) {
-			    System.out.println(alt);
+			for (String alt : q.getAlternativas()) {
+				System.out.println(alt);
 			}
 
-			System.out.print("Sua resposta (A–E): ");
+			System.out.print("Resposta: ");
 			char marcada;
+
 			try {
-				marcada = Questao.normalizar(in.nextLine().trim().charAt(0));
+				marcada = Questao.normalizarAlternativa(in.nextLine().trim().charAt(0));
 			} catch (Exception e) {
-				System.out.println("resposta inválida (marcando como errada)");
+				System.out.println("inválida (considerada errada)");
 				marcada = 'X';
 			}
 
-			var r = new Resposta();
-			r.setQuestaoId(q.getId());
-			r.setAlternativaMarcada(marcada);
-			r.setCorreta(q.isRespostaCorreta(marcada));
+			Resposta r = new Resposta(
+					q.getId(),
+					marcada,
+					q.isRespostaCorreta(marcada)
+			);
 
-			tentativa.getRespostas().add(r);
+			tentativa.adicionarResposta(r);
 		}
 
 		tentativas.add(tentativa);
 
 		int nota = calcularNota(tentativa);
+
 		System.out.println("\n--- Fim da Prova ---");
-		System.out.println("Nota (acertos): " + nota + " / " + tentativa.getRespostas().size());
+		System.out.println("Nota: " + nota + "/" + tentativa.getRespostas().size());
 	}
+
+	// ================= AUX =================
 
 	public static int calcularNota(Tentativa tentativa) {
 		int acertos = 0;
-		for (var r : tentativa.getRespostas()) {
-			if (r.isCorreta())
+
+		for (Resposta r : tentativa.getRespostas()) {
+			if (r.isCorreta()) {
 				acertos++;
+			}
 		}
+
 		return acertos;
 	}
 
 	static void listarTentativas() {
 		System.out.println("\n--- Tentativas ---");
-		for (var t : tentativas) {
-			System.out.printf("#%d | participante=%d | prova=%d | nota=%d/%d%n", t.getId(), t.getParticipanteId(),
-					t.getProvaId(), calcularNota(t), t.getRespostas().size());
+
+		for (Tentativa t : tentativas) {
+			System.out.printf(
+					"#%d | participante=%d | prova=%d | nota=%d/%d%n",
+					t.getId(),
+					t.getParticipanteId(),
+					t.getProvaId(),
+					calcularNota(t),
+					t.getRespostas().size()
+			);
 		}
 	}
 
+	// ================= ESCOLHAS =================
 
 	static Long escolherParticipante() {
 		System.out.println("\nParticipantes:");
-		for (var p : participantes) {
-			System.out.printf("  %d) %s%n", p.getId(), p.getNome());
+		for (Participante p : participantes) {
+			System.out.printf("%d - %s%n", p.getId(), p.getNome());
 		}
-		System.out.print("Escolha o id do participante: ");
 
 		try {
 			long id = Long.parseLong(in.nextLine());
-			boolean existe = participantes.stream().anyMatch(p -> p.getId() == id);
-			if (!existe) {
-				System.out.println("id inválido");
-				return null;
-			}
-			return id;
+			return participantes.stream().anyMatch(p -> p.getId() == id) ? id : null;
 		} catch (Exception e) {
-			System.out.println("entrada inválida");
 			return null;
 		}
 	}
 
 	static Long escolherProva() {
 		System.out.println("\nProvas:");
-		for (var p : provas) {
-			System.out.printf("  %d) %s%n", p.getId(), p.getTitulo());
+		for (Prova p : provas) {
+			System.out.printf("%d - %s%n", p.getId(), p.getTitulo());
 		}
-		System.out.print("Escolha o id da prova: ");
 
 		try {
 			long id = Long.parseLong(in.nextLine());
-			boolean existe = provas.stream().anyMatch(p -> p.getId() == id);
-			if (!existe) {
-				System.out.println("id inválido");
-				return null;
-			}
-			return id;
+			return provas.stream().anyMatch(p -> p.getId() == id) ? id : null;
 		} catch (Exception e) {
-			System.out.println("entrada inválida");
 			return null;
 		}
 	}
 
+	// ================= TABULEIRO =================
+
 	static void imprimirTabuleiroFen(String fen) {
+		String[] linhas = fen.split(" ")[0].split("/");
 
-		String parteTabuleiro = fen.split(" ")[0];
-		String[] ranks = parteTabuleiro.split("/");
-
-		System.out.println();
-		System.out.println("    a b c d e f g h");
-		System.out.println("   -----------------");
-
-		for (int r = 0; r < 8; r++) {
-
-			String rank = ranks[r];
-			System.out.print((8 - r) + " | ");
-
-			for (char c : rank.toCharArray()) {
-
+		for (String linha : linhas) {
+			for (char c : linha.toCharArray()) {
 				if (Character.isDigit(c)) {
-					int vazios = c - '0';
-					for (int i = 0; i < vazios; i++) {
+					int n = c - '0';
+					for (int i = 0; i < n; i++) {
 						System.out.print(". ");
 					}
 				} else {
 					System.out.print(c + " ");
 				}
 			}
-
-			System.out.println("| " + (8 - r));
+			System.out.println();
 		}
-
-		System.out.println("   -----------------");
-		System.out.println("    a b c d e f g h");
-		System.out.println();
 	}
 
+	// ================= SEED =================
 
 	static void seed() {
-
-		var prova = new Prova();
+		Prova prova = new Prova();
 		prova.setId(proximaProvaId++);
-		prova.setTitulo("Olimpíada 2026 • Nível 1 • Prova A");
+		prova.setTitulo("Prova exemplo");
 		provas.add(prova);
-
-		var q1 = new Questao();
-		q1.setId(proximaQuestaoId++);
-		q1.setProvaId(prova.getId());
-
-		q1.setEnunciado("""
-				Questão 1 — Mate em 1.
-				É a vez das brancas.
-				Encontre o lance que dá mate imediatamente.
-				""");
-
-		q1.setFenInicial("6k1/5ppp/8/8/8/7Q/6PP/6K1 w - - 0 1");
-
-		q1.setAlternativas(new String[] { "A) Qh7#", "B) Qf5#", "C) Qc8#", "D) Qh8#", "E) Qe6#" });
-
-		q1.setAlternativaCorreta('C');
-
-		questoes.add(q1);
 	}
 }
